# heterob

./: Cargo.toml  README.md
benches/: bit_numbering.rs
examples/: main.rs
src/: bit_numbering.rs  common.rs  endianness.rs  lib.rs  macros.rs
tests/: one.rs
